--- a/css/Mycss.css
+++ b/css/Mycss.css
@@ -168,3 +168,13 @@
 .ui-autocomplete {
 	z-index: 9999 !important;
 }
+
+.imglistTypeDevices {
+	height: 150px;
+	width: 150px;
+}
+
+.modal-body {
+	max-height: calc(100vh - 210px);
+	overflow-y: auto;
+}
