--- a/style/assets/css/Mycss.css
+++ b/style/assets/css/Mycss.css
@@ -124,3 +124,139 @@
 .hideElment{
 	display: none;
 }
+
+
+
+
+
+
+/*=== Import Raleway fonts ===*/
+
+
+
+
+#content{
+	margin:10px auto;
+	background:#F7F7F1;
+	height:200px;
+	width:70%;
+	/*border-radius*/
+	-webkit-border-radius:8px;
+	-moz-border-radius:8px;
+	border-radius:8px;
+	-webkit-box-shadow:0 1px 0 rgba(0,0,0,.1);
+	-moz-box-shadow:0 1px 0 rgba(0,0,0,.1);
+	box-shadow:0 1px 0 rgba(0,0,0,.1);
+}
+
+
+.discount-label {
+	padding: 6px;
+	position: relative;
+	float: right;
+	margin-top: 25px;
+	margin-left: -40px;
+	width: 80px;
+	-webkit-border-radius: 0 4px 0 4px;
+	-moz-border-radius: 0 4px 0 4px;
+	border-radius: 0 4px 4px 0;
+
+}
+
+.discount-label:after {
+
+	right: 100%;
+	border: solid transparent; content: " ";
+	height: 0;
+	width: 0;
+	position: absolute;
+	border-color: rgba(136, 183, 213, 0);
+
+	border-width: 20px;
+	top: 50%;
+	margin-top: -20px;}
+
+.discount-label:before {
+	content: '';
+	z-index: 2;
+	position: absolute;
+	top: 42%;
+	right: 100%;
+	width: 7px;
+	height: 7px;
+	opacity: .95;
+	background: #ffffff;
+	border-radius: 7px;
+	-webkit-box-shadow: inset .5px 0 rgba(0, 0, 0, 0.6);
+	box-shadow: inset .5px 0 rgba(0, 0, 0, 0.6);
+
+}
+
+
+.discount-label span {
+	color:#ffffff;
+	font-size:20px;
+	text-align:left;
+	font-family:"Raleway",Helvetica;
+	font-size: small;
+
+}
+
+
+.red{
+	background-color:#E80707;
+}
+
+.red:after{
+	border-right-color: #E80707;
+
+}
+
+
+.blue{
+	background-color:#1883DB;
+}
+.blue:after{
+	border-right-color: #1883DB;
+}
+
+.green{
+	background-color:#16B516;
+}
+
+.green:after{
+	border-right-color: #16B516;
+}
+
+.yellow{
+	background-color:#feaa00;
+}
+
+.yellow:after{
+	border-right-color: #feaa00;
+}
+
+.gray{
+	background-color:#737373;
+}
+
+.gray:after{
+	border-right-color: #737373;
+}
+
+.black{
+	background-color:#000;
+
+}
+
+.black:after{
+	border-right-color: #000;
+}
+
+
+
+.rotats {
+	-ms-transform: rotate(-90deg); /* IE 9 */
+	-webkit-transform: rotate(-90deg); /* Safari */
+	transform: rotate(-90deg); /* Standard syntax */
+}
